# socket.io-serverpp

./: .gitignore  CMakeLists.txt  README.md  index_v4.html  index_v4_polling.html  index_v4_upgrade.html
examples/: test1.cpp  usage.cpp  usage_polling.cpp  usage_unified.cpp
socket.io-serverpp/: Constants.hpp  Error.hpp  Event.hpp  HttpServer.hpp  Logger.hpp  Message.hpp  SIOServer.hpp  Server.hpp  Socket.hpp  SocketNamespace.hpp  config.hpp  socketio-serverpp.hpp  uuid.hpp
socket.io-serverpp/common/: cppconfig.hpp
socket.io-serverpp/engineio/: EngineIOServer.hpp  EngineIOSession.hpp
socket.io-serverpp/scgi/: Netstring.h  Request.h  Service.h
socket.io-serverpp/socketio/: Socket.cpp  Socket.hpp  SocketIOServer.cpp  SocketIOServer.hpp  SocketNamespace.cpp  SocketNamespace.hpp
socket.io-serverpp/transport/: PollingTransport.hpp  Transport.hpp  UnifiedTransport.hpp  WebSocketTransport.hpp
tests/: CMakeLists.txt  test_constants.cpp  test_error.cpp  test_event.cpp  test_integration.cpp  test_logger.cpp  test_message.cpp  test_sioserver.cpp  test_socket.cpp  test_socketnamespace.cpp
